--- a/RESTComponent.Images.Decoder/RESTComponent.Images.Decoder.csproj
+++ b/RESTComponent.Images.Decoder/RESTComponent.Images.Decoder.csproj
@@ -4,17 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98908500-E932-47FE-8D8F-C40C127F182B}</ProjectGuid>
+    <ProjectGuid>{C13BAF70-A7F3-4CDF-A438-BDB4D713CD38}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RESTComponent.ImagesProvider</RootNamespace>
-    <AssemblyName>RESTComponent.ImagesProvider</AssemblyName>
+    <RootNamespace>RESTComponent.Images.Decoder</RootNamespace>
+    <AssemblyName>RESTComponent.Images.Decoder</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,11 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IImageProvider.cs" />
-    <Compile Include="ImageProvider.cs" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="IImagesDecoder.cs" />
+    <Compile Include="ImagesDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
