--- a/RESTComponent.Console/RESTComponent.Console.csproj
+++ b/RESTComponent.Console/RESTComponent.Console.csproj
@@ -119,12 +119,12 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
@@ -138,6 +138,10 @@
     <ProjectReference Include="..\RESTComponent.Api\RESTComponent.Api.csproj">
       <Project>{3cce772b-2d3c-424a-955d-2e01a090cec3}</Project>
       <Name>RESTComponent.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RESTComponent.Images.Decoder.Bitmap\RESTComponent.Images.Decoder.Bitmap.csproj">
+      <Project>{bf7002f3-ecba-435a-96d7-4637103ce529}</Project>
+      <Name>RESTComponent.Images.Decoder.Bitmap</Name>
     </ProjectReference>
     <ProjectReference Include="..\RESTComponent.Images.Provider\RESTComponent.Images.Provider.csproj">
       <Project>{98908500-e932-47fe-8d8f-c40c127f182b}</Project>
