--- a/RESTComponent.Preview/RESTComponent.Preview.csproj
+++ b/RESTComponent.Preview/RESTComponent.Preview.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RESTComponent.Preview</RootNamespace>
     <AssemblyName>RESTComponent.Preview</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -196,6 +196,10 @@
     <ProjectReference Include="..\RESTComponent.CameraImages\RESTComponent.CameraImages.csproj">
       <Project>{05270e5c-f4d1-4684-9793-002b2fc7a6bf}</Project>
       <Name>RESTComponent.CameraImages</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RESTComponent.Images.Decoder.ImageSource\RESTComponent.Images.Decoder.ImageSource.csproj">
+      <Project>{217315b5-7b0c-4771-9705-093ef7aaa7ce}</Project>
+      <Name>RESTComponent.Images.Decoder.ImageSource</Name>
     </ProjectReference>
     <ProjectReference Include="..\RESTComponent.Images.Decoder\RESTComponent.Images.Decoder.csproj">
       <Project>{c13baf70-a7f3-4cdf-a438-bdb4d713cd38}</Project>
