--- a/RESTComponent.Api/RESTComponent.Api.csproj
+++ b/RESTComponent.Api/RESTComponent.Api.csproj
@@ -84,6 +84,26 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RTM.Images, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.Bitmap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.ImageSource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Provider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Provider.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
@@ -91,7 +111,6 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
@@ -106,10 +125,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RESTComponent.Images.Provider\RESTComponent.Images.Provider.csproj">
-      <Project>{98908500-e932-47fe-8d8f-c40c127f182b}</Project>
-      <Name>RESTComponent.Images.Provider</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RESTComponent.RTComponent.Configuration\RESTComponent.RTComponent.Configuration.csproj">
       <Project>{3a4184ae-528f-46d0-b21b-6cbc6e83bec6}</Project>
       <Name>RESTComponent.RTComponent.Configuration</Name>
