--- a/RESTComponent.Api/packages.config
+++ b/RESTComponent.Api/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="RTM.Images" version="1.0.0.0" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.WebAPI" version="5.1" targetFramework="net45" />
 </packages>
