--- a/RESTComponent.Preview/RESTComponent.Preview.csproj
+++ b/RESTComponent.Preview/RESTComponent.Preview.csproj
@@ -106,6 +106,26 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RTM.Images, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.Bitmap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.ImageSource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Provider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Provider.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -197,18 +217,6 @@
       <Project>{05270e5c-f4d1-4684-9793-002b2fc7a6bf}</Project>
       <Name>RESTComponent.CameraImages</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Decoder.Bitmap\RESTComponent.Images.Decoder.Bitmap.csproj">
-      <Project>{bf7002f3-ecba-435a-96d7-4637103ce529}</Project>
-      <Name>RESTComponent.Images.Decoder.Bitmap</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Decoder.ImageSource\RESTComponent.Images.Decoder.ImageSource.csproj">
-      <Project>{217315b5-7b0c-4771-9705-093ef7aaa7ce}</Project>
-      <Name>RESTComponent.Images.Decoder.ImageSource</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Decoder\RESTComponent.Images.Decoder.csproj">
-      <Project>{c13baf70-a7f3-4cdf-a438-bdb4d713cd38}</Project>
-      <Name>RESTComponent.Images.Decoder</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RESTComponent.RTComponent.Configuration\RESTComponent.RTComponent.Configuration.csproj">
       <Project>{3a4184ae-528f-46d0-b21b-6cbc6e83bec6}</Project>
       <Name>RESTComponent.RTComponent.Configuration</Name>
@@ -216,10 +224,6 @@
     <ProjectReference Include="..\RESTComponent.RTComponent\RESTComponent.RTComponent.csproj">
       <Project>{d5166226-e10f-4323-90af-0e6dd1efc1e8}</Project>
       <Name>RESTComponent.RTComponent</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Provider\RESTComponent.Images.Provider.csproj">
-      <Project>{98908500-e932-47fe-8d8f-c40c127f182b}</Project>
-      <Name>RESTComponent.ImagesProvider</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
