--- a/RESTComponent.RTComponent/RESTComponent.RTComponent.csproj
+++ b/RESTComponent.RTComponent/RESTComponent.RTComponent.csproj
@@ -46,6 +46,26 @@
     <Reference Include="OpenRTM.Core, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
     <Reference Include="OpenRTM.Extension, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
     <Reference Include="OpenRTM.IIOP, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
+    <Reference Include="RTM.Images, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.Bitmap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Decoder.ImageSource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RTM.Images.Provider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.0.0\lib\net30\RTM.Images.Provider.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
   </ItemGroup>
@@ -58,18 +78,14 @@
       <Project>{05270e5c-f4d1-4684-9793-002b2fc7a6bf}</Project>
       <Name>RESTComponent.CameraImages</Name>
     </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Decoder\RESTComponent.Images.Decoder.csproj">
-      <Project>{c13baf70-a7f3-4cdf-a438-bdb4d713cd38}</Project>
-      <Name>RESTComponent.Images.Decoder</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\RESTComponent.Images.Provider\RESTComponent.Images.Provider.csproj">
-      <Project>{98908500-e932-47fe-8d8f-c40c127f182b}</Project>
-      <Name>RESTComponent.Images.Provider</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RESTComponent.RTComponent.Configuration\RESTComponent.RTComponent.Configuration.csproj">
       <Project>{3a4184ae-528f-46d0-b21b-6cbc6e83bec6}</Project>
       <Name>RESTComponent.RTComponent.Configuration</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
